# Projecto_002B

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/controllers/: analysis_controller.py  series_controller.py
backend/app/db/: mongo.py
backend/app/errors/: handlers.py
backend/app/middlewares/: logger.py
backend/app/models/: analysis_model.py  series_model.py
backend/app/routes/: series_routes.py
backend/app/services/: analysis_service.py  math_service.py  prime_service.py  series_service.py
backend/tests/: conftest.py  test_series_api.py
frontend/: Dockerfile  README.md  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/src/: App.tsx  AppContainer.tsx  index.css  main.tsx  types.ts
frontend/src/components/: SeriesAnalysis.tsx  SeriesForm.tsx  SeriesList.tsx
frontend/src/hooks/: useSeriesDashboard.ts
frontend/src/lib/: api.ts  parse.ts
frontend/src/pages/: SeriesDashboardPage.tsx
