[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Mateo_Liberatore",email = "liberatoremate98@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.128.3,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "pymongo (>=4.16.0,<5.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
